# tps-bitbucket.org-deboghosh-tridiaglu

./: .gitignore  Makefile.am  README  README.md  configure.ac  make_mpi  make_serial  test.c
doc/: Scalability_1e06_Brute.ps  Scalability_1e06_GatherAndSolve.ps  Scalability_1e06_RecursiveDoubling.ps  Scalability_1e07_Brute.ps  Scalability_1e07_GatherAndSolve.ps  Scalability_1e07_RecursiveDoubling.ps
include/: matops.h  tridiagLU.h
scripts/comparison/: clean  compile  run  sanitize  setup
src/: Makefile.am
src/Test/: Makefile.am  test.c
src/TridiagLU/: Makefile.am  MatOps.c  blocktridiagIterJacobi.c  blocktridiagLU.c  tridiagLU.c  tridiagLUGS.c  tridiagLURD.c  tridiagScaLPK.c
