noinst_LIBRARIES = libTridiagLU.a
libTridiagLU_a_SOURCES = blocktridiagLU.c \
                         blocktridiagIterJacobi.c \
												 MatOps.c \
												 tridiagLU.c \
                         tridiagLUGS.c \
                         tridiagIterJacobi.c \
                         tridiagLUInit.c
